--- a/build.gradle
+++ b/build.gradle
@@ -130,24 +130,24 @@ afterEvaluate {
         plugins.remove(0)
         plugins.add(firstPlugin)
         if (securityEnabled) {
-            node.extraConfigFile("kirk.pem", file("src/test/resources/security/kirk.pem"))
-            node.extraConfigFile("kirk-key.pem", file("src/test/resources/security/kirk-key.pem"))
-            node.extraConfigFile("esnode.pem", file("src/test/resources/security/esnode.pem"))
-            node.extraConfigFile("esnode-key.pem", file("src/test/resources/security/esnode-key.pem"))
-            node.extraConfigFile("root-ca.pem", file("src/test/resources/security/root-ca.pem"))
-            node.setting("opendistro_security.ssl.transport.pemcert_filepath", "esnode.pem")
-            node.setting("opendistro_security.ssl.transport.pemkey_filepath", "esnode-key.pem")
-            node.setting("opendistro_security.ssl.transport.pemtrustedcas_filepath", "root-ca.pem")
-            node.setting("opendistro_security.ssl.transport.enforce_hostname_verification", "false")
-            node.setting("opendistro_security.ssl.http.enabled", "true")
-            node.setting("opendistro_security.ssl.http.pemtrustedcas_filepath", "root-ca.pem")
-            node.setting("opendistro_security.allow_unsafe_democertificates", "true")
-            node.setting("opendistro_security.allow_default_init_securityindex", "true")
-            node.setting("opendistro_security.authcz.admin_dn", "CN=kirk,OU=client,O=client,L=test,C=de")
-            node.setting("opendistro_security.audit.type", "internal_elasticsearch")
-            node.setting("opendistro_security.enable_snapshot_restore_privilege", "true")
-            node.setting("opendistro_security.check_snapshot_restore_write_privileges", "true")
-            node.setting("opendistro_security.restapi.roles_enabled", "[\"all_access\", \"security_rest_api_access\"]")
+//            node.extraConfigFile("kirk.pem", file("src/test/resources/security/kirk.pem"))
+//            node.extraConfigFile("kirk-key.pem", file("src/test/resources/security/kirk-key.pem"))
+//            node.extraConfigFile("esnode.pem", file("src/test/resources/security/esnode.pem"))
+//            node.extraConfigFile("esnode-key.pem", file("src/test/resources/security/esnode-key.pem"))
+//            node.extraConfigFile("root-ca.pem", file("src/test/resources/security/root-ca.pem"))
+//            node.setting("opendistro_security.ssl.transport.pemcert_filepath", "esnode.pem")
+//            node.setting("opendistro_security.ssl.transport.pemkey_filepath", "esnode-key.pem")
+//            node.setting("opendistro_security.ssl.transport.pemtrustedcas_filepath", "root-ca.pem")
+//            node.setting("opendistro_security.ssl.transport.enforce_hostname_verification", "false")
+//            node.setting("opendistro_security.ssl.http.enabled", "true")
+//            node.setting("opendistro_security.ssl.http.pemtrustedcas_filepath", "root-ca.pem")
+//            node.setting("opendistro_security.allow_unsafe_democertificates", "true")
+//            node.setting("opendistro_security.allow_default_init_securityindex", "true")
+//            node.setting("opendistro_security.authcz.admin_dn", "CN=kirk,OU=client,O=client,L=test,C=de")
+//            node.setting("opendistro_security.audit.type", "internal_elasticsearch")
+//            node.setting("opendistro_security.enable_snapshot_restore_privilege", "true")
+//            node.setting("opendistro_security.check_snapshot_restore_write_privileges", "true")
+//            node.setting("opendistro_security.restapi.roles_enabled", "[\"all_access\", \"security_rest_api_access\"]")
         }
     }
 }
