--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ ext {
     isSnapshot = "true" == System.getProperty("build.snapshot", "true")
 }
 
-group 'org.opensearch.opendistroforelasticsearch'
+group 'org.opensearch'
 version = "${opensearchVersion}.0-rc1"
 
 sourceCompatibility = 1.9
