--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,16 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew build -Dopensearch.version=2.0.0-alpha1-SNAPSHOT
+        run: ./gradlew build
       - name: Pull and Run Docker for security tests
         run: |
-          version=2.0.0-alpha1-SNAPSHOT
-          plugin_version=2.0.0.0-SNAPSHOT
+          version=`./gradlew properties -q | grep "opensearch_version:" | awk '{print $2}'`
+          IFS='-' read -r -a version_array <<< "$version"
+          plugin_version="${version_array[0]}.0"; for entry in ${version_array[@]:1}; do plugin_version+="-$entry"; done
+
+          echo version $version
+          echo plugin_version $plugin_version
+
           pwd=`pwd`
           echo $pwd
           cd ..
@@ -108,7 +113,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew.bat build -D"opensearch.version=2.0.0-alpha1-SNAPSHOT" -x integTest -x jacocoTestReport
+        run: ./gradlew.bat build -x integTest -x jacocoTestReport
         env:
           _JAVA_OPTIONS: -Xmx4096M
       - name: Create Artifact Path
@@ -136,7 +141,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
       - name: Build with Gradle
-        run: ./gradlew build -Dopensearch.version=2.0.0-alpha1-SNAPSHOT -x integTest -x jacocoTestReport
+        run: ./gradlew build -x integTest -x jacocoTestReport
         env:
           _JAVA_OPTIONS: -Xmx4096M
       - name: Create Artifact Path
