--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,7 @@ publishing {
             pom {
                 name = "opensearch-asynchronous-search"
                 description = "OpenSearch Asynchronous Search plugin"
+                groupId = "org.opensearch.plugin"
                 licenses {
                     license {
                         name = "The Apache License, Version 2.0"
