--- a/build.gradle
+++ b/build.gradle
@@ -124,9 +124,11 @@ publishing {
 }
 
 dependencies {
+    testImplementation "org.antlr:antlr4-runtime:${versions.antlr4}"
     testImplementation "org.opensearch.plugin:reindex-client:${opensearch_version}"
     testImplementation "org.opensearch.plugin:lang-painless:${opensearch_version}"
     testImplementation "org.opensearch.test:framework:${opensearch_version}"
+    compileOnly "org.opensearch.plugin:opensearch-scripting-painless-spi:${versions.opensearch}"
     compileOnly "org.opensearch.plugin:transport-netty4-client:${opensearch_version}"
     compileOnly "org.opensearch:opensearch:${opensearch_version}"
     implementation "org.opensearch:common-utils:${common_utils_version}"
