--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         java:
           - 21
     # Job name
-    name: Build Asynchronous Search
+    name: Linux - Build Asynchronous Search
     # This job runs on Linux.
     outputs:
       build-test-linux: ${{ steps.step-build-test-linux.outputs.build-test-linux }}
@@ -131,7 +131,7 @@ jobs:
             ./gradlew integTest -Dtests.rest.cluster=localhost:9200 -Dtests.cluster=localhost:9200 -Dtests.clustername="docker-cluster"
           fi
       - name: Upload failed logs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: logs
@@ -139,7 +139,7 @@ jobs:
 
   windows-build:
     # Job name
-    name: Build Asynchronous Search
+    name: Windows - Build Asynchronous Search
     # This job runs on Windows.
     runs-on: windows-latest
     steps:
@@ -161,14 +161,14 @@ jobs:
           cp ./build/distributions/*.zip asynchronous-search-artifacts
       # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: asynchronous-search-plugin-windows
           path: asynchronous-search-artifacts
 
   mac-os-build:
     # Job name
-    name: Build Asynchronous Search
+    name: MacOS - Build Asynchronous Search
     # This job runs on Mac OS.
     runs-on: macos-latest
     steps:
@@ -190,7 +190,7 @@ jobs:
           cp ./build/distributions/*.zip asynchronous-search-artifacts
       # This step uses the upload-artifact Github action: https://github.com/actions/upload-artifact
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: asynchronous-search-plugin-mac
           path: asynchronous-search-artifacts
